função criadora de blocos curvos

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 </head>
 <body>
     <canvas id="sol">
-    <script src="/main.js" type="module"></script>
+    <script src="/src/main.js" type="module"></script>
 </body>
 </html>
