--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 </head>
 <body>
     <canvas id="sol">
-    <script src="/src/main.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
 </body>
 </html>
